# probabilistic-word-embeddings

./: .gitignore  README.md  app.py  dynamic.py  examine.py  laplacian.py  nietzsche.txt  pyproject.toml  train_with_validation.py  vi.py  weighted_laplacian.py
docs/: index.html  probabilistic_word_embeddings.html  search.js
examples/: cbow.py  dynamic.py  laplacian.py  sgns.py  train_with_validation.py  vi.py
probabilistic_word_embeddings/: __init__.py  embeddings.py  estimation.py  evaluation.py  laplacian_utils.py  models.py  preprocessing.py  utils.py
results/: cbow-200M-lambda1-16.0-lambda0-0.01.txt  cbow-200M-lambda1-18.0-lambda0-0.01.txt  cbow-200M-lambda1-20.0-lambda0-0.01.txt  cbow-lambda1-0.0-lambda0-0.01.txt  cbow-lambda1-0.0-lambda0-0.015849.txt  cbow-lambda1-0.0-lambda0-0.025119.txt  cbow-lambda1-0.0-lambda0-0.039811.txt  cbow-lambda1-0.0-lambda0-0.063096.txt  cbow-lambda1-0.0-lambda0-0.1.txt  cbow-lambda1-0.0-lambda0-0.158489.txt  cbow-lambda1-0.0-lambda0-0.251189.txt  cbow-lambda1-0.0-lambda0-0.398107.txt  cbow-lambda1-0.0-lambda0-0.630957.txt  cbow-lambda1-0.0-lambda0-1.txt  cbow-lambda1-0.01-lambda0-0.01.txt  cbow-lambda1-0.01-lambda0-0.015849.txt  cbow-lambda1-0.01-lambda0-0.021544.txt  cbow-lambda1-0.01-lambda0-0.025119.txt  cbow-lambda1-0.01-lambda0-0.031623.txt  cbow-lambda1-0.01-lambda0-0.039811.txt  cbow-lambda1-0.01-lambda0-0.046416.txt  cbow-lambda1-0.01-lambda0-0.063096.txt  cbow-lambda1-0.01-lambda0-0.1.txt  cbow-lambda1-0.01-lambda0-0.215443.txt  cbow-lambda1-0.01-lambda0-0.316228.txt  cbow-lambda1-0.01-lambda0-0.464159.txt  cbow-lambda1-0.01-lambda0-1.txt  cbow-lambda1-0.01-lambda0-10.txt  cbow-lambda1-0.01-lambda0-2.154433.txt  cbow-lambda1-0.01-lambda0-3.162278.txt  cbow-lambda1-0.01-lambda0-31.622777.txt  cbow-lambda1-0.01-lambda0-4.641592.txt  (+238 more)
tests/: distributions.py  (+8 more)
(+24 files in other folders)
