[tool.poetry]
name = "probabilistic-word-embeddings"
version = "1.8.0"
description = "Probabilistic Word Embeddings for Python"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.2"
tensorflow-probability = "*"
progressbar2 = "*"
networkx = "*"
pandas = "*"
scikit-learn = "*"
colorlog = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
