[tool.poetry]
name = "probabilistic-word-embeddings"
version = "1.15.1"
description = "Probabilistic Word Embeddings for Python"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://ninpnin.github.io/probabilistic-word-embeddings/"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "<= 2.15.1"
tensorflow-probability = "<= 0.23"
progressbar2 = "*"
networkx = "*"
pandas = "*"
scikit-learn = "*"
colorlog = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
