[tool.poetry]
name = "probabilistic-word-embeddings"
version = "2.0.0rc2"
description = "Probabilistic Word Embeddings for Python"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://ninpnin.github.io/probabilistic-word-embeddings/"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "~=2.16"
tensorflow-probability = "*"
tf-keras = "*"
progressbar2 = "*"
networkx = "*"
pandas = "*"
scikit-learn = "*"
colorlog = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
